infrastructure/flux/notification-receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: public
  tls:
    - secretName: orriborri-com-tls
  rules:
    - host: ${FLUX_NOTIFICATION_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-receiver
                port:
                  number: 9292
